--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,6 @@
                 xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8"/>
-    <!--<link type="text/css" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">-->
     <link type="text/css" href="webjars/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" href="css/index.css" rel="stylesheet">
     <link type="text/css" href="css/custom.css" rel="stylesheet">
@@ -17,13 +16,6 @@
                 <a class="navbar-brand" th:href="@{/index.html}" id="brand">Система управления камерами</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <!--<div class="col-lg-8" id="bs-example-navbar-collapse-1">-->
-                <!--<ul class="navbar-nav mr-auto">-->
-                        <!--<li><a class="nav-link disabled" href="#" id="mega">Мегафон</a></li>-->
-                        <!--<li><a class="nav-link disabled" href="#" id="mts">МТС</a></li>-->
-                        <!--<li><a class="nav-link disabled" href="#" id="mtt">МТТ</a></li>-->
-                        <!--<li><a class="nav-link disabled" href="#" id="test">Test</a></li>-->
-                    <!--</ul>-->
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"  >
@@ -36,20 +28,6 @@
                     </li>
                 </ul>
             </div>
-            <!--<div class="col-lg-4">-->
-                <!--<ul class="navbar-nav ml-auto">-->
-                    <!--<li class="nav-item dropdown">-->
-                        <!--<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"  >-->
-                            <!--<label th:text="${username}"></label>-->
-                        <!--</a>-->
-                        <!--<div class="dropdown-menu" aria-labelledby="navbardrop">-->
-                            <!--<a class="dropdown-item" href="#" id="changePassword">Смена пароля</a>-->
-                            <!--<a class="dropdown-item" th:href="@{/logout}" id="logout">Выйти</a>-->
-                        <!--</div>-->
-                    <!--</li>-->
-                <!--</ul>-->
-            <!--</div>-->
-
         </div>
     </nav>
 </header>
@@ -83,55 +61,6 @@
             </div>
         </div>
         <div class="container-fluid" style="padding-top: 1%">
-            <!--<div class="row mb-4 mr-2">-->
-                <!--<div class="col-md-1">-->
-
-                <!--</div>-->
-                <!--<div class="col-md-4">-->
-                        <!---->
-                <!--</div>-->
-                <!--<div class="col-md-7">-->
-                    <!--<div class="card1">-->
-                        <!--<h3 style="font-size: 1.5rem; font-weight: 300; margin-bottom: .75rem;">запросы для установления</h3>-->
-                        <!--<div class="row">-->
-                            <!--<div class="col-sm-6 col-lg-6 mb-2">-->
-                                <!--<a class="link_td_none" th:href="@{/srifsm}">-->
-                                    <!--&lt;!&ndash;<div class="card2 text-white change-bg-dark" style="height: 100%;" onmouseover="toolTip('uuuuuuuuu')" onmouseout="toolTip()">&ndash;&gt;-->
-                                    <!--<div class="card2 text-white change-bg-dark" style="height: 100%;">-->
-                                        <!--<div class="card-body">-->
-                                            <!--<p class="card-text"><b>bla bla;</b><br/>(bla)</p>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</a>-->
-                            <!--</div>-->
-                            <!--<div class="col-sm-6 col-lg-6 mb-2">-->
-                                <!--<a class="link_td_none" th:href="@{/psi?imsi=0&vlr=0}">-->
-                                    <!--<div class="card2 text-white change-bg-dark" style="height: 100%;">-->
-                                        <!--<div class="card-body">-->
-                                            <!--<p class="card-text"><b>blaaaaaa;</b><br/>(bbbbbbb)</p>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</a>-->
-                            <!--</div>-->
-                            <!---->
-                        <!---->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="row mb-4 mr-3">-->
-                <!--<div class="col-md-1">-->
-
-                <!--</div>-->
-                <!--<div class="col-md-4">-->
-
-                <!--</div>-->
-                <!--<div class="col-md-7">-->
-                    <!--<div class="card1">-->
-
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
             <div class="row mb-4 mr-3">
                 <div class="col-md-1">
 
@@ -144,7 +73,7 @@
                         <h3 style="font-size: 1.5rem; font-weight: 300; margin-bottom: .75rem;">Основное меню</h3>
                         <div class="row">
                             <div class="col-sm-6 col-lg-4 mb-3">
-                                <a class="link_td_none" th:href="@{/index}">
+                                <a class="link_td_none" th:href="@{/users-controll}">
                                     <div class="card2 text-white change-bg-dark" style="height: 100%;">
                                         <div class="card-body">
                                             <p class="card-text">Камеры<br/>видеонаблюдения&nbsp;</p>
@@ -210,14 +139,8 @@
     </div>
 </footer>
 <script type="text/javascript" src="webjars/jquery/2.2.4/jquery.min.js"></script>
-<!--<script type="application/json" src="webjars/jquery/2.2.4/jquery.min.js"></script>-->
-<!--<script src="js/bootstrap.min.js"></script>-->
-<!--<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
 <script type="text/javascript" src="webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
-<!--<script type="application/javascript" src="js/index.js"></script>-->
-<!--<script src="js/index.js"></script>-->
-<!--<script src="js/tooltip.js"></script>-->
 <script>
     $(document).ready(function () {
         $("#changePassword").click(function () {
@@ -246,17 +169,14 @@
         };
 
         $.ajax({
-            // type: "POST",
             type: "PATCH",
-            // url: "/api/usersControll3",
-            url: "/api/usersControll",
+            // url: "/api/usersControll",
+            url: "/api/users",
             data: JSON.stringify(addingFormData),
             dataType: 'json',
             contentType: "application/json; charset=utf-8",
             success: function (data) {
-                 // alert("Success of chaging");
                  alert("Пароль успешно изменен");
-//                $("#TableUsers").dataTable()._fnAjaxUpdate();
             },
             error: function (e) {
                 alert("проблемы с сохранением");
@@ -265,13 +185,5 @@
         })
     }
 </script>
-
-<!--<script th:inline="javascript">-->
-    <!--var data = {ejb: 'false', sql: 'true'};-->
-    <!--var valimput;-->
-    <!--window.onload = function () {-->
-        <!--highlightServer();-->
-    <!--}-->
-<!--</script>-->
 </body>
 </html>
