--- a/src/main/resources/templates/users-controll.html
+++ b/src/main/resources/templates/users-controll.html
@@ -20,8 +20,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" >
-                                      <label th:text="${username}"></label>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown"
+                               role="button" aria-haspopup="true" aria-expanded="false">
+                                <label th:text="${username}"></label>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbardrop">
                                 <a class="dropdown-item" th:href="@{/logout}">Выйти</a>
@@ -64,7 +65,9 @@
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h4 class="modal-title" style="margin-left: 40px">Добавить пользователя</h4>
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
+                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                                                x
+                                            </button>
                                         </div>
                                         <div class="modal-body">
                                             <form id="additing-form">
@@ -90,8 +93,10 @@
                                             </form>
                                         </div>
                                         <div class="modal-footer">
-                                            <button id="submitForm" type="submit" class="btn btn-info">Сохранить</button>
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+                                            <button id="submitForm" type="submit" class="btn btn-info">Сохранить
+                                            </button>
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
@@ -118,11 +123,8 @@
         </div>
     </div>
 </div>
-<!--<script src="js/jquery-1.12.4.min.js"></script>-->
 <script type="text/javascript" src="webjars/jquery/2.2.4/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.dataTables.min.js"></script>
-<!--<script src="js/bootstrap.min.js"></script>-->
-<!--<script type="text/javascript" src="webjars/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
 <script type="text/javascript" src="webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
 <script type="text/javascript" src="js/users-controll.js"></script>
@@ -139,37 +141,34 @@
         $('#TableUsers').DataTable({
 
             "ajax": {
-                url: "/api/usersControll",
+                // url: "/api/usersControll",
+                url: "/api/users",
                 type: "GET",
                 dataSrc: ""
             },
             "columns": [
-//                {"data": "id"},
                 {"data": "name"},
                 {"data": "description"},
-//                {"data": "password"},
                 {"data": "role"}
             ]
         });
     });
-    //           alert("datatables");
 </script>
 <script>
     $(document).ready(function () {
         var table = $('#TableUsers').DataTable();
-        var description , name, password, role;
+        var description, name, password, role;
 
         $('#TableUsers tbody').on('click', 'tr', function () {
             document.getElementById("buttonDelete").disabled = false;
-            if ($(this).hasClass('selected')){
+            if ($(this).hasClass('selected')) {
                 $(this).removeClass('selected');
-            }
-            else {
+            } else {
                 table.$('tr.selected').removeClass('selected');
                 $(this).addClass('selected');
                 var a = table.row($(this).closest('tr')).data();
                 console.log(a);
-                var b = Object.keys(a).map(function (key){
+                var b = Object.keys(a).map(function (key) {
                     return [String(key), a[key]];
                 });
                 console.log(b[0][1].toString());
@@ -177,42 +176,43 @@
                 name = b[1][1].toString();
                 password = b[2][1].toString();
                 role = b[3][1].toString();
-                console.log(description,' ', name,' ', password,' ', role)
+                console.log(description, ' ', name, ' ', password, ' ', role)
 //                console.log(typeof id);
             }
         });
 
-        $('#buttonDelete').click( function () {
+        $('#buttonDelete').click(function () {
             event.preventDefault();
             delete_user();
             table.row('.selected').remove().draw(false);
             document.getElementById("buttonDelete").disabled = true;
         });
-         function delete_user() {
-             var addingFormData = {
-                 description : description,
-                 name : name,
-                 password : password,
-                 role : role
-             };
-             $.ajax({
-                 // type: "POST",
-                 type: "DELETE",
-                 // url: "/api/usersControll2",
-                 url: "/api/usersControll",
-                 data: JSON.stringify(addingFormData),
-                 dataType: 'json',
-                 contentType: "application/json; charset=utf-8",
-                 success: function (data) {
-                     // alert("Success of server's adding");
-                     $("#TableUsers").dataTable()._fnAjaxUpdate();
-                 }
+
+        function delete_user() {
+            var addingFormData = {
+                description: description,
+                name: name,
+                password: password,
+                role: role
+            };
+            $.ajax({
+                // type: "POST",
+                type: "DELETE",
+                // url: "/api/usersControll2",
+                url: "/api/users",
+                data: JSON.stringify(addingFormData),
+                dataType: 'json',
+                contentType: "application/json; charset=utf-8",
+                success: function (data) {
+                    // alert("Success of server's adding");
+                    $("#TableUsers").dataTable()._fnAjaxUpdate();
+                }
 //                 error: function (e) {
 //                     alert("проблемы с сохранением");
 //                 }
 
-             })
-    }
+            })
+        }
     });
 </script>
 
