--- a/src/main/resources/templates/user-management.html
+++ b/src/main/resources/templates/user-management.html
@@ -37,22 +37,16 @@
     <section>
         <div class="container mt-3">
             <div class="row">
-                <!--<div class="col-2">
-
-                </div>-->
                 <div class="col-12">
                     <div class="card mb-4">
                         <div class="body1">
                             <h2>Управление пользователями</h2>
                             <div class="table mt-4">
-                                <!--<table id="TableServers" class="table table-striped table-bordered" width="70%">-->
                                 <table id="TableUsers" class="table table-striped table-bordered" width="100%">
                                     <thead>
                                     <tr>
-                                        <!--<th>id</th>-->
                                         <th>Логин</th>
                                         <th>Описание пользователя</th>
-                                        <!--<th>Пароль</th>-->
                                         <th>Роль</th>
                                     </tr>
                                     </thead>
@@ -127,7 +121,7 @@
 <script type="text/javascript" src="js/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="webjars/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
-<script type="text/javascript" src="js/users-controll.js"></script>
+<script type="text/javascript" src="js/users-management.js"></script>
 <script>
     $(document).ready(function () {
         $("#buttonCreate").click(function () {
@@ -141,7 +135,6 @@
         $('#TableUsers').DataTable({
 
             "ajax": {
-                // url: "/api/usersControll",
                 url: "/api/users",
                 type: "GET",
                 dataSrc: ""
@@ -177,7 +170,6 @@
                 password = b[2][1].toString();
                 role = b[3][1].toString();
                 console.log(description, ' ', name, ' ', password, ' ', role)
-//                console.log(typeof id);
             }
         });
 
@@ -196,21 +188,14 @@
                 role: role
             };
             $.ajax({
-                // type: "POST",
                 type: "DELETE",
-                // url: "/api/usersControll2",
                 url: "/api/users",
                 data: JSON.stringify(addingFormData),
                 dataType: 'json',
                 contentType: "application/json; charset=utf-8",
                 success: function (data) {
-                    // alert("Success of server's adding");
                     $("#TableUsers").dataTable()._fnAjaxUpdate();
                 }
-//                 error: function (e) {
-//                     alert("проблемы с сохранением");
-//                 }
-
             })
         }
     });
